@@ -1,5 +1,7 @@
+DIST clementine-0.6.tar.gz 5601219 RMD160 5b7418bef5bed9a9f1837741ea31fa3304894f88 SHA1 02f2ca926aad9748e3b4f58642b1daf95dadbc16 SHA256 7a7393af462a3c0864279d8cb2fc59afeec718837e5a1d0818a16b8a20d7cd0c
 DIST clementine-0.6rc1-1.tar.gz 5586769 RMD160 37c2be41768a4b80bdefa3dcfdd853278af33c47 SHA1 c2f61da085c17ecac6fb3bd247fb8df5404948a2 SHA256 879191c72fb73f06ac74b01cb0efa1e8896f227b13778c4eb9f2357bb93683e1
+EBUILD clementine-0.6.ebuild 2762 RMD160 8099a98cae2f788efc1612a76be02fff20c527ff SHA1 064e4ae49ce772ce2de52d1306228b00ee877e13 SHA256 05d4578076a1230365066474cdc2affc451c53a3cc413436809ca61954514e01
 EBUILD clementine-0.6_rc1.ebuild 2813 RMD160 092d72d525108a730202783d18a17d5cefdab277 SHA1 7a211dcece9bbd96583befa0ee649487bee4e840 SHA256 911a44122a1fb03c75be5505c105273c33a14cd69217a171c2f602493305adc8
 EBUILD clementine-9999.ebuild 3461 RMD160 d39f072c9326999d3a1ea8e5404e2c02baa3bcf7 SHA1 42c8d4522bc26cc7f695cb38666f7ac8d5ff0ce3 SHA256 064e1f866104e02bc158abb4b682c42d3116bc6b62fc011a349663624989e506
-MISC ChangeLog 2059 RMD160 66b1a5b8ad4f27421b2df68deec3eaec65649b49 SHA1 d919c3ccd1b954743b51f1edcdeaf34339f87a87 SHA256 e6bdb6f0b9f9e8a7ad31f12c6a3d437fa669cf758cdb24aad2012bdd107e3fc4
+MISC ChangeLog 2173 RMD160 eac33202c6b40b3a0009cc3e9c91c541ae074e57 SHA1 b3210cc37903369309c11e2d045caf21862776c5 SHA256 d0dc0d513dbfd138916a43178cdb9881f13ff73769258f7d14670813c90c48b5
 MISC metadata.xml 776 RMD160 c14890630a6350d5430024ee98ff07516efe47ba SHA1 75d79fb005fe248e67577a1f3172d3824375710e SHA256 798ad79a30f13fbc6d57f2906ada34fd94a39d7da5fd61f91937a3abfc8db031
