@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*clementine-0.6 (12 Dec 2010)
+
+  12 Dec 2010; Nikoli <nikoli@lavabit.com> +clementine-0.6.ebuild:
+  version bump
+
 *clementine-0.6_rc1 (07 Dec 2010)
 
   07 Dec 2010; Nikoli <nikoli@lavabit.com> +clementine-0.6_rc1.ebuild,
